# csa-lite-master

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  LICENSE  LICENSE-MIT  README.md  pyproject.toml  requirements.txt
data/: README.md
data/interim/: README.md
data/processed/: README.md  csa_lite_cases.csv  csa_lite_cases.jsonl
data/raw/: README.md  candidate_cases.csv  sources_manifest.csv
docs/: annex_iii_mapping_rubric.md  coding_protocol.md  data_dictionary.md  limitations_and_disclaimers.md  manuscript_alignment.md  reproducibility.md  scoring_rubric.md  source_quality_rubric.md
notebooks/: 01_dataset_overview.ipynb  02_scoring_and_sensitivity.ipynb  03_figures_for_manuscript.ipynb
outputs/: README.md  scored_cases.csv  scored_cases.jsonl
outputs/figures/: README.md
outputs/reports/: README.md  case_audit_report.json  case_audit_report.md  final_manuscript_integration_checklist.md  manuscript_artifact_manifest.json  manuscript_artifact_manifest.md  reference_audit_checklist.md  reproducibility_report.json  reproducibility_report.md  scoring_summary.md  validation_report.json  validation_report.md
outputs/tables/: README.md  sensitivity_detail.csv  supp_table_s2_scored_cases.csv  supp_table_s3_sensitivity_per_case.csv  supp_table_s4_sources_manifest.csv  supp_table_s5_annex_mapping_rationales.csv  supp_table_s6_validation_summary.csv  supp_table_s7_case_audit_flags.csv  table_1_csalite_dimensions.csv  (+7 more)
paper_txt/: CSA_lite_MDPI_Electronics.md  CSA_lite_MDPI_Electronics_v0.2.0.md  CSA_lite_MDPI_Electronics_v0.2.1.md  CSA_lite_MDPI_Electronics_v0.2.2.md
schemas/: case.schema.json  scoring.schema.json  sources.schema.json
tests/: test_analysis.py  test_cli.py  test_manuscript_claims.py  test_plots.py  test_schema_validation.py  test_scoring.py  test_sensitivity.py
(+16 files in other folders)
